FreeST/test/Programs/ValidTests/Modules/DiamondL/D.fst
module D where 

d : Int -> Int 
d x = x * 2