FreeST/test/Programs/InvalidTests/mainNotValue/mainNotValue.fst
main : Int -> Bool
main x = True
